# Home

./: .gitignore  Device Config.json  Home.sln
Configuration/: Devices.cs  Devices.csproj  DevicesExtension.cs  GpioLevelTrigger.cs
Gpio/: Gpio.csproj  Pin.cs
Home.Server/: Dockerfile  Home.Server.csproj  Program.cs  Startup.cs  libman.json
Home.Server/Daemons/: Daemon.cs  Devices.cs  Lights.cs
Home.Server/Daemons/Kitchen/: GpioLevelTrigger.cs  Kitchen.cs  Lights.cs
Home.Server/Hubs/: KitchenHub.cs  LightsHub.cs
Home.Server/Pages/: Error.cshtml.cs  Index.cshtml  Index.cshtml.cs  Kitchen.cshtml  Kitchen.cshtml.cs  Privacy.cshtml.cs
Home.Server/Pages/Shared/: _Layout.cshtml
Home.Server/Properties/: launchSettings.json
Home.Server/Repositories/: Home Repo.cs  IKitchenRepo.cs  ILightsRepo.cs
Home.Server/wwwroot/css/: site.css  weather.css
Home.Server/wwwroot/js/: kitchen.js  lights.js  site.js  weather.js
Kitchen/Arduino/kitchen/: kitchen.ino
Kitchen/Arduino/udp_server/: udp_server.ino
Kitchen/KitchenDaemon/: KitchenDaemon.csproj  Package.appxmanifest  StartupTask.cs
Kitchen/UdpDaemon/: Program.cs  UdpDaemon.csproj  Worker.cs
Kitchen/src/: CMakeLists.txt
Kitchen/src/libraries/SyncTime/: sync_time.h
Kitchen/src/src/tests/: jsonTest.cpp
Kitchen/src/tests/: CMakeLists.txt  jsonTest.cpp
Startup_Files/: startup.bat  startup.ps1
libraries/DelayFuncs/: delayfuncs.h
libraries/DeviceMessage/: DeviceMessage.h
libraries/Levels/: Levels.h
libraries/Protocol/: protocol.h
libraries/SyncTime/: sync_time.h
libraries/Vent/: VentController.h
(+11 files in other folders)
